sumo/tests/duarouter/alternatives/style2_input/errors/routealt/routealt_last_empty/errors.duarouter
Error: Attribute 'last' in definition of route '!1' is empty.
Quitting (on error).
